# transitoryinfssrn-4007466

./: .env.example  .gitignore  ACTIVE_HANDOFF.md  AGENTS.md  CLAUDE.md  NEXT_TASKS.md  README.md  pyproject.toml  requirements.txt  run_app.ps1
.github/workflows/: python-checks.yml
app/: streamlit_app.py
docs/: 00_PROJECT_CONTEXT.md  01_RESEARCH_SPEC.md  02_DATA_CONTRACT.md  03_AGENT_WORKFLOW.md  04_VALIDATION_PROTOCOL.md  05_DASHBOARD_BRIEF.md  06_DECISION_LOG.md  07_BACKLOG.md  08_LOCALHOST_REVIEW.md  09_PRODUCTION_ROADMAP.md  10_AGENT_EXECUTION_PLAYBOOK.md  CLAUDE_PROMPTS.md  DASHBOARD_UI_POLISH_PLAN.md  FULL_CODEBASE_AUDIT_AND_FIX_PLAN.md  IMPLEMENTATION_PLAN.md  METHODOLOGY.md  PAPER_FORMULA_REFERENCE.md  PAPER_NOTES.md  PHASE0_RESEARCH_CONTRACTS.md  RESEARCH_CHECKLIST.md
prompts/: 00_read_only_audit.md  01_replication_loop.md  02_live_signal_loop.md  03_dashboard_eyeball.md  04_market_linkage.md  05_git_prep.md
reports/: PHASE_0_5_AUDIT_FINDINGS.md  PHASE_0_5_AUDIT_PLAN.md
scripts/: extract_reference_paper.py  fetch_fred_data.py  run_paper_replication.py
src/transitory_inflation/: __init__.py  benchmarks.py  config.py  dashboard.py  data.py  diagnostics.py  features.py  market_data.py  market_linkage.py  models.py  plots.py  report.py  robustness.py  (+2 more)
tests/: test_benchmarks.py  test_dashboard.py  test_decay.py  test_diagnostics.py  test_features.py  test_market_data.py  test_market_linkage.py  test_phase0_research_contracts.py  test_plots.py  test_robustness.py  test_sample_modes.py  test_trader_report.py  test_trader_research.py  test_validation.py
(+2 files in other folders)
